--- a/7FlipCounter/src/index.html
+++ b/7FlipCounter/src/index.html
@@ -5,7 +5,7 @@
   <title>7FlipCounter</title>
   <base href="/7FlipCounter/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/7FlipCounter/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/7FlipCounter/7flip-favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="/7FlipCounter/manifest.webmanifest">
